--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceRoot}\\index.js",
+            "program": "${workspaceRoot}\\src\\server.js",
             "cwd": "${workspaceRoot}"
         },
         {
