--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-    "name": "book-inventory",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "node src/server.js",
-        "test": "mocha"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "body-parser": "1.17.1",
-        "express": "4.15.2",
-        "mongodb": "2.2.24"
-    },
-    "devDependencies": {
-        "mocha": "3.2.0",
-        "supertest": "3.0.0"
-    }
+  "name": "book-inventory",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "lint": "jshint --exclude=node_modules/** .",
+    "test": "mocha",
+    "test:xunit": "npm run test -- --reporter xunit"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "1.17.1",
+    "express": "4.15.2",
+    "mongodb": "2.2.24"
+  },
+  "devDependencies": {
+    "jshint": "^2.9.4",
+    "mocha": "3.2.0",
+    "supertest": "3.0.0"
+  }
 }
